other-mpol/mutate-large-termination-gps/.kyverno-test/exception-resource.yaml
apiVersion: v1
kind: Pod
metadata: {name: exception-pod, namespace: team-a}
spec: {terminationGracePeriodSeconds: 100, containers: [{name: app, image: nginx:latest}]}
