other-mpol/mutate-large-termination-gps/.kyverno-test/exception.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata: {name: exception, namespace: policy-exceptions}
spec:
  policyRefs: [{name: mutate-termination-grace-period-seconds, kind: MutatingPolicy}]
  matchConditions: [{name: exact, expression: object.metadata.namespace == 'team-a' && object.metadata.name == 'exception-pod'}]
