other-mpol/mutate-large-termination-gps/.kyverno-test/patchedResource2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod02
spec:
  containers: 
  - name: busybox
    image: busybox:1.28
