other-mpol/mutate-large-termination-gps/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mutate-termination-grace-period-seconds
policies:
- ../mutate-large-termination-gps.yaml
resources:
- resource.yaml
- exception-resource.yaml
exceptions:
- exception.yaml
results:
- kind: Pod
  patchedResources: patchedResource1.yaml
  policy: mutate-termination-grace-period-seconds
  resources:
  - demo-pod01
  result: pass
  isMutatingPolicy: true
- kind: Pod
  policy: mutate-termination-grace-period-seconds
  resources: [exception-pod]
  result: skip
  isMutatingPolicy: true
- kind: Pod
  patchedResources: patchedResource2.yaml
  policy: mutate-termination-grace-period-seconds
  resources:
  - demo-pod02
  result: skip
  isMutatingPolicy: true
